# orCadChecklistTool

./: .dockerignore  .env.example  .gitignore  AI_PRODUCT_ANALYSIS.md  CLAUDE.md  Dockerfile  EVALUATION_COMPLETE.md  PROJECT_ANALYSIS_SUMMARY.md  QUALITY_REVIEW_REPORT.md  README.md  code_quality_report.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: database.yaml.example
data/: orcad_checker.db  seed_knowledge.json
docs/: DOCUMENTATION_ASSESSMENT_REPORT.md  OrCAD_Checker_完整功能文档.md  PROJECT_ANALYSIS_SUMMARY.md  architecture.md  deployment.md  features.md  tcl_knowledge_base.md  technical-guide.md
frontend/: package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
rules/: default_rules.yaml  tcl_safety_rules.yaml
schemas/: design_export.schema.json
src/orcad_checker/: cli.py
tcl/: README.md  build_bundle.py  export_json.tcl  extract_design.tcl  orcad_checker.tcl
tcl/checkers/: check_connector_pinout.tcl  check_crystal_load_caps.tcl  check_decoupling_caps.tcl  check_esd_protection.tcl  check_i2c_pullups.tcl  check_impedance_matching.tcl  check_power_voltage_label.tcl  check_reset_pin.tcl  check_standard_values.tcl  check_test_points.tcl  check_thermal_pad.tcl  check_unused_pin_handling.tcl  duplicate_refdes.tcl  footprint_validation.tcl  load_all.tcl  missing_attributes.tcl  net_naming.tcl  power_net_naming.tcl  single_pin_nets.tcl  unconnected_pins.tcl
tcl/lib/: nets.tcl  (+4 more)
tests/: conftest.py  test_api.py  test_config.py  test_engine.py  test_parser.py  test_store.py  test_tcl_results.py
(+66 files in other folders)
